# RESTapi-backend

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  installer.sh  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
dockerConfigFiles/grafana/dashboards/: dashboard.json
dockerConfigFiles/prometheus/: prometheus.yml
docs/: API.rst  About Project.md  For Developers.md  Installation.md  Services.md  index.rst
src/: .env  Makefile  Opisanie_API.md  app.py  test_db.py
src/apps/v1/: v1.py
src/apps/v1/routers/: operator.py  public.py
src/core/: config.py  security.py
src/database/: db.py
src/middlewares/: create_tokens.py  crud.py  date_module.py  error_handler.py  jwt_bearer.py  responses.py  utils.py
src/middlewares/crud_system/: admin.py  groups.py  schedule.py  teachers.py
src/models/: abstact_models.py  abstract_models.py  pydantic_models.py
src/routers/: admin.py  public.py
